busybox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: busybox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: harbor.smarttradzt.com/dockerhub/busybox:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      volumes:
        - name: busybox
          persistentVolumeClaim:
            claimName: busybox-volume-claim
